# kotiks-web

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: render.yml
backend/: Dockerfile  main.py  pyproject.toml  server.py
docs/: be_fe_connections.md  proper_setup.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Contact.jsx  Header.jsx  Home.jsx  Popup.jsx
frontend/src/components/Contact/: Contact.jsx  Contact.module.css
frontend/src/components/Footer/: Footer.jsx  Footer.module.css
frontend/src/components/Header/: Header.jsx  Header.module.css
frontend/src/components/Home/: AnimatedName.jsx  AnimatedName.module.css  Home.jsx  Home.module.css
frontend/src/components/More/: More.jsx  More.module.css
frontend/src/components/Popup/: LadderSVG.jsx  LadderSVG.module.css  Popup.jsx  Popup.module.css
frontend/src/components/ScrollIndicator/: ScrollIndicator.jsx  ScrollIndicator.module.css
frontend/src/components/SectionSeparator/: SectionSeparator.jsx  SectionSeparator.module.css
frontend/src/components/TopProgressBar/: TopProgressBar.jsx  TopProgressBar.module.css
frontend/src/styles/: App.css  theme.css  utilities.css
nginx/: dev.conf  prod.conf
